[package]
name = "delugional"
version = "0.1.0"
edition = "2021"
authors = ["Diretnan Domnan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_26"] }
kube = { version = "^0.80.0", default-features = false, features = ["client", "runtime"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
tokio = { version = "1.14.0", features = ["full"] }
anyhow = "1.0.44"
