[package]
name = "delugional"
version = "0.1.0"
edition = "2021"
authors = ["Diretnan Domnan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.14.0", features = ["full"] }
anyhow = "1.0.69"

[dependencies.kube]
version = "^0.80.0"
features = ["runtime", "client"]
